<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Alertify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="found_gotify_version">Found Gotify v%s</string>
    <string name="version_failed_status_code">Request to \'%s\' failed with status code %d</string>
    <string name="version_failed">Request to \'%s\' failed. %s.</string>
    <string name="wronguserpw">There is no user with this username and password</string>
    <string name="create_client_title">Client Name</string>
    <string name="create_client_message">Choose a name for your session</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_client_failed">Create client failed</string>
    <string name="created_client">Created client</string>
    <string name="title_activity_logs">Logs</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="oops">Oops</string>
    <string name="not_available">Cannot connect to %s</string>
    <string name="auth_failed">Server returned 401 unauthorized while trying to get current user. This can be caused by deleting the client for this session.</string>
    <string name="other_error">Could not get current user. Server (%s) responded with code %d: body (first 200 chars): %s</string>
    <string name="websocket_failed">Connection failed, trying again in %d minutes</string>
    <string name="websocket_closed">WebSocket closed; The client-token could be invalidated, please re-login</string>
    <string name="grouped_message">Received %d messages while being disconnected</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_logs">Delete logs</string>
    <string name="copy_logs">Copy logs</string>
    <string name="logs_copied">Logs copied</string>
    <string name="snackbar_deleted">Message deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="all_messages">All Messages</string>
    <string name="logs">Logs</string>
    <string name="message_image_desc">The image of a message</string>
    <string name="delete_message">Delete message</string>
    <string name="gotify_url">https://push.example.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="disabled_validate_ssl">Disable SSL Validation</string>
    <string name="select_ca_certificate">Select CA Certificate</string>
    <string name="select_ca_file">Select a Certificate File</string>
    <string name="please_install_file_browser">Please install a file browser</string>
    <string name="select_ca_failed">Failed to read CA: %s</string>
    <string name="login">Login</string>
    <string name="check_url">Check URL</string>
    <string name="alertify_logo">Alertify logo</string>
    <string name="refresh_all">Refresh all</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="missed_messages">Missed messages</string>
    <string name="grouped_notification_text">New Messages</string>
    <string name="websocket_listening">Listening to %s</string>
    <string name="websocket_could_not_connect">Could not connect %s</string>
    <string name="websocket_init">Initializing</string>
    <string name="versions">Alertify/android v%s; gotify/server v%s</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="done">Done</string>
    <string name="no_certificate_selected">No certificate selected</string>
    <string name="remove_ca_certificate">Remove CA Certificate</string>
    <string name="warning">Warning</string>
    <string name="http_warning">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>
    <string name="i_understand">I Understand</string>
    <string name="websocket_no_network">Waiting for network</string>
    <string name="connection">%s@%s</string>
    <string name="no_messages_yet">There are no messages, yet.\nSend a message to Gotify\nand it will appear here.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_key_theme">theme</string>
    <string name="push_message">Push message</string>
    <string name="appListDescription">App:</string>
    <string name="priorityDescription">Priority:</string>
    <string name="push_button">Push Message</string>
    <string name="push_title_hint">Title</string>
    <string name="push_content_hint">Content</string>
    <string name="push_priority_hint">Priority</string>
    <string name="MuteCritical">Mute Critical</string>
    <string name="MuteCriticalT">Mute Critical Alerts</string>
    <string name="MuteCritical_key">mute</string>
    <string name="MuteDefault">False</string>
    <string name="app_label">Wireless emergency alerts</string>
    <string name="button_gsm_cmas_pres_alert" translatable="false">Send GSM CMAS Presidential Alert</string>
    <string name="button_gsm_cmas_extreme_alert" translatable="false">Send GSM CMAS Extreme Alert</string>
    <string name="button_gsm_cmas_severe_alert" translatable="false">Send GSM CMAS Severe Alert</string>
    <string name="button_gsm_cmas_amber_alert" translatable="false">Send GSM CMAS AMBER Alert</string>
    <string name="button_gsm_cmas_monthly_test" translatable="false">Send GSM CMAS Monthly Test Alert</string>
    <string name="button_gsm_cmas_exercise_test" translatable="false">Send GSM CMAS Exercise Test Alert</string>
    <string name="button_gsm_public_safety_message" translatable="false">Send GSM Public Safety Message</string>
    <string name="button_gsm_state_local_test_alert" translatable="false">Send State/Local Test Alert</string>
    <string name="button_etws_earthquake_type" translatable="false">Send ETWS Earthquake Broadcast</string>
    <string name="button_etws_tsunami_type" translatable="false">Send ETWS Tsunami Broadcast</string>
    <string name="button_etws_earthquake_tsunami_type" translatable="false">Send ETWS Earthquake and Tsunami Broadcast</string>
    <string name="button_etws_other_type" translatable="false">Send ETWS Other Emergency Broadcast</string>
    <string name="button_etws_cancel_type" translatable="false">Send ETWS Cancel Broadcast</string>
    <string name="button_etws_test_type" translatable="false">Send ETWS Test Broadcast</string>
    <string name="sms_cb_settings">Wireless emergency alerts</string>
    <string name="sms_cb_sender_name" translatable="false">Wireless emergency alerts</string>
    <string name="cell_broadcast_settings_not_available">Wireless emergency alert settings are not available for this user</string>
    <string name="button_dismiss">OK</string>
    <string name="no_cell_broadcasts">No previous alerts</string>
    <string name="menu_delete_all">Delete broadcasts</string>
    <string name="message_options">Message options</string>
    <string name="menu_view_details">View details</string>
    <string name="menu_delete">Delete broadcast</string>
    <string name="view_details_title">Alert details</string>
    <string name="view_details_debugging_title" translatable="false">Alert details for debugging</string>
    <string name="confirm_delete_broadcast">Delete this broadcast?</string>
    <string name="confirm_delete_all_broadcasts">Delete all received broadcast messages?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="etws_earthquake_warning">Earthquake warning</string>
    <string name="etws_tsunami_warning">Tsunami warning</string>
    <string name="etws_earthquake_and_tsunami_warning">Earthquake and tsunami warning</string>
    <string name="etws_test_message">ETWS test message</string>
    <string name="etws_other_emergency_type">Emergency warning</string>
    <string name="cmas_presidential_level_alert">Presidential alert</string>
    <string name="cmas_extreme_alert">Emergency alert: Extreme</string>
    <string name="cmas_extreme_immediate_observed_alert">Emergency alert: Extreme</string>
    <string name="cmas_extreme_immediate_likely_alert">Emergency alert: Extreme</string>
    <string name="cmas_severe_alert">Emergency alert: Severe</string>
    <string name="cmas_amber_alert">Child abduction (Amber alert)</string>
    <string name="cmas_required_monthly_test">Required Monthly Test</string>
    <string name="cmas_exercise_alert">Emergency alert (exercise)</string>
    <string name="cmas_operator_defined_alert">Emergency alert (operator)</string>
    <string name="CriticalTitle">Critical Alert</string>
    <string name="pws_other_message_identifiers" translatable="false">@string/emergency_alert</string>
    <string name="cb_other_message_identifiers">Broadcast messages</string>
    <string name="public_safety_message">Public safety message</string>
    <string name="state_local_test_alert">State/Local test</string>
    <string name="emergency_alert">Emergency alert</string>
    <string name="emergency_alerts_title">Alerts</string>
    <string name="notification_channel_broadcast_messages">Broadcast messages</string>
    <string name="notification_channel_emergency_alerts">Emergency alerts</string>
    <string name="notification_channel_broadcast_messages_in_voicecall" translatable="false">Emergency alerts in voice call</string>
    <string name="enable_alerts_master_toggle_title">Allow alerts</string>
    <string name="enable_alerts_master_toggle_summary">Receive wireless emergency alert notifications</string>
    <string name="alert_reminder_interval_title">Alert reminder</string>
    <string name="alert_reminder_interval_summary" tools:ignore="MissingTranslation" />
    <string name="alert_reminder_dialog_title" translatable="false">A reminder sound will play at regular volume</string>
    <string name="emergency_alert_history_title">Emergency alert history</string>
    <string name="alert_preferences_title">Alert preferences</string>
    <string name="enable_etws_test_alerts_title">ETWS test broadcasts</string>
    <string name="enable_etws_test_alerts_summary">Test broadcasts for Earthquake Tsunami Warning System</string>
    <string name="enable_cmas_extreme_threat_alerts_title">Extreme threats</string>
    <string name="enable_cmas_extreme_threat_alerts_summary">Extreme threats to life and property</string>
    <string name="enable_cmas_severe_threat_alerts_title">Severe threats</string>
    <string name="enable_cmas_severe_threat_alerts_summary">Severe threats to life and property</string>
    <string name="enable_cmas_amber_alerts_title">AMBER alerts</string>
    <string name="enable_cmas_amber_alerts_summary">Child abduction emergency bulletins</string>
    <string name="enable_alert_message_title">Alert messages</string>
    <string name="enable_alert_message_summary">Warn about imminent safety threats</string>
    <string name="enable_public_safety_messages_title">Public safety messages</string>
    <string name="enable_public_safety_messages_summary">Recommended actions that can save lives or property</string>
    <string name="enable_state_local_test_alerts_title">State and local tests</string>
    <string name="enable_state_local_test_alerts_summary">Receive test messages from state and local authorities</string>
    <string name="enable_emergency_alerts_message_title">Emergency alerts</string>
    <string name="enable_emergency_alerts_message_summary">Warn about life-threatening events</string>
    <string name="enable_cmas_test_alerts_title">Test alerts</string>
</resources>