<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/push_title_hint"
        android:inputType="text"
        android:singleLine="true"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/push_content_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines ="10"
        android:maxLength ="2000"/>

    <EditText
        android:id="@+id/edtTxtPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/push_priority_hint"
        android:inputType="numberSigned"
        android:digits="0123456789"
        android:maxLength ="3"
        android:layout_margin="20dp"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtAppListDesc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/appListDescription"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/appSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/push_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/push_button"
        android:layout_marginBottom="20dp"/>
</LinearLayout>